Довавление слайдера в отзывы, работа с адаптивом

--- a/less/blocks/_review.less
+++ b/less/blocks/_review.less
@@ -38,6 +38,7 @@
     color: @review-text-color;
     background-color:@darkwine;
     border-radius: 5px;
+    max-width: 45.5rem;
     &::before {
       content: "";
       display: block;
