--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,9 @@
 @import "blocks/_fonts";
 
+// ==== slick slider - Styles - ===
+@import "../node_modules/slick-carousel/slick/slick-theme.less";
+@import "../node_modules/slick-carousel/slick/slick.less";
+
 //* === Custom resets ===
 
 html {
@@ -45,6 +49,7 @@ body {
   font-family: "Arial", Helvetica, sans-serif;
   margin: 0;
   overflow-x: hidden;
+  width:100vw;
 }
 *,
 :after,
@@ -81,4 +86,5 @@ body {
 @import "blocks/_feedback";
 @import "blocks/_form";
 @import "blocks/_footer";
+@import "blocks/_slick";
 @import "blocks/_helpers";
