--- a/less/blocks/_vars.less
+++ b/less/blocks/_vars.less
@@ -17,7 +17,7 @@
 @primary-color: #c74f33;
 // часто используемые цвета
 @white: #fff;
-@black: #010101;
+@black: #2b2b2b;
 @lightblack: #333333;
 @lightwhite: #f5f5f5;
 @lightgray: #989898;
@@ -47,4 +47,4 @@
 @lightwhite: rgba(169, 59, 21, 0.4);
 @lightblack: #fbfbfb;
 @darkwine: burlywood;
-@orange: indigo;
+@orange: @black;
